--- a/SalesWebMVC/Views/Home/About.cshtml
+++ b/SalesWebMVC/Views/Home/About.cshtml
@@ -3,9 +3,11 @@
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
+<br />
 
-<p>Aluno @ViewData["Aluno"]</p>
+<p>Nome: @ViewData["Aluno"]</p>
+<p>Desenvolvedor em formação !</p>
 
 <address>
-    <strong> More information: </strong> <a href="http://educandoweb.com.br">Educandoweb.com.br</a>
+    <strong> Github with the complet program : </strong> <a href="https://github.com/JoaoLacerda27/Sistemas_Vendas">Github.com/JoaoLacerda27/Sistema_Vendas</a>
 </address>
