--- a/SalesWebMVC/Views/Home/Contact.cshtml
+++ b/SalesWebMVC/Views/Home/Contact.cshtml
@@ -2,16 +2,15 @@
     ViewData["Title"] = "Contact";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<br />
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    São Paulo<br />
+    Embu das artes<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    97070-7070
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong> <a href="mailto:joaolacerda186@gmail.com">joaolacerda186@gmail.com</a><br />
 </address>
